Fixed the work section small screen view, Still have to fix the navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,10 @@ form .btn2 {
     scroll-behavior: smooth;
   }
 
+  /* #nav-menu {
+    display: none;
+  } */
+
   .containing-image {
     background: url(../images/20190831-DSC_2667.jpg);
     background-size: cover;
@@ -491,9 +495,14 @@ form .btn2 {
   }
 
   nav .fas {
-    display: block;
+    display: flex;
+    justify-content: center;
     font-size: 25px;
     color: white;
+    /* background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+    width: 60px;
+    height: 60px; */
   }
 
   #nav-menu {
@@ -510,8 +519,9 @@ form .btn2 {
     z-index: 9999;
   }
 
-  nav ul {
+  /* nav ul {
     position: fixed;
+
     top: 0;
     right: 0;
     width: 20%;
@@ -519,7 +529,7 @@ form .btn2 {
     padding-top: 50px;
     z-index: 2;
     transition: right 0.4s;
-  }
+  } */
 
   nav ul li {
     display: flex;
@@ -534,6 +544,14 @@ form .btn2 {
     color: white;
     cursor: pointer;
   }
+
+  /* nav {
+    display: none;
+  } */
+
+  /* #nav-menu {
+    display: none;
+  } */
 
   .title h2 {
     font-size: 1rem;
@@ -557,19 +575,21 @@ form .btn2 {
     flex-direction: column-reverse;
   }
   .work-container {
-    margin-top: 30%;
+    margin-top: 90%;
   }
 
   .photo-grid {
-    margin-top: 10%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-    grid-gap: 20px;
+    margin-top: 150%;
+    display: flex;
+    /* grid-template-columns: repeat(auto-fit, minmax(380px, 1fr)); */
+    /* grid-gap: 20px; */
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 
   .about-pic {
     width: 100%;
-    height: 40%;
+    height: 60%;
     background: url(../images/logo.png);
     background-size: cover;
     overflow: hidden;
@@ -586,7 +606,7 @@ form .btn2 {
   .photo-item {
     position: relative;
     overflow: hidden;
-    margin-top: 50%;
+    margin-top: 2%;
     /* width: 90%; */
   }
 
@@ -621,7 +641,7 @@ form .btn2 {
     background-size: cover;
     overflow: hidden;
   } */
-  */ nav .fas {
+  nav .fas {
     display: block;
     font-size: 25px;
     color: white;
